--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy;BizForeSight All Rights Reserved.</p>
+        <p>&copy;&nbsp;BizForeSight All Rights Reserved.</p>
       </div>
     </footer>
     <script src="script.js"></script>
