--- a/sub/agriculture.html
+++ b/sub/agriculture.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Business News</title>
-    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
       rel="stylesheet"
@@ -97,8 +96,8 @@
       .agri-01 .raw-materials:hover,
       .agri-01 .processes:hover,
       .agri-01 .outcomes:hover {
-        background: #1f6feb; /* Blue background on hover */
-        color: white; /* White text on hover */
+        background: #1f6feb; 
+        color: white;
         transform: scale(1.02);
         transition: 0.3s ease;
       }
@@ -119,7 +118,7 @@
     </header>
     <main>
         <div id="agri-container"></div>
-        <h1 style="display: flex;justify-content: space-evenly;border-bottom: 2px solid #1f6feb; padding-bottom: 20px;"> <span>o</span> FUTURE OF AGRICULTURE <span>o</span> </h1>
+        <h1 style="display: flex;justify-content: space-evenly;border-bottom: 2px solid #1f6feb; padding-bottom: 20px;cursor:pointer;"> <span>o</span> FUTURE OF AGRICULTURE <span>o</span> </h1>
         <div id="agri-future"></div>
     </main>
     <footer class="footer">
@@ -160,7 +159,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy;BizForeSight All Rights Reserved.</p>
+        <p>&copy;&nbsp;BizForeSight All Rights Reserved.</p>
       </div>
     </footer>
     <script src="../sub-js/agriculture.js"></script>
