--- a/sub/fishing.html
+++ b/sub/fishing.html
@@ -1,28 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business News</title>
-    <link rel="stylesheet" href="../styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fishing Through the Ages</title>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../styles.css" />
+  </head>
+  <style>
+    h1 {
+  font-size: 2.5rem;
+  margin: 0;
+}
+main #fishing-container, #fishing-future {
+  display: grid;
+  overflow: hidden;
+  grid-template-columns: 2fr 2fr;
+  grid-template-rows: auto;
+}
+
+.fishing-card {
+  font-family: "Arial", sans-serif;
+  background: linear-gradient(135deg, #0d1117, #21262d);
+  padding: 20px;
+  border: 2px solid #58a6ff;
+  border-radius: 10px;
+  max-width: 600px;
+  overflow: hidden;
+  height: auto;
+  cursor: pointer;
+  margin: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  color: #c9d1d9;
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
+  position: relative;
+}
+
+.fishing-card:hover {
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+}
+
+.fishing-card .image-container img {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.fishing-card .image-container img:hover {
+  transform: scale(1.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.fishing-card .image-container img {
+  width: 300px;
+  height: 300px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.fishing-card h2 {
+  color: #58a6ff;
+  text-align: center;
+  font-size: 1.8rem;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  border-bottom: 2px solid #58a6ff;
+  padding-bottom: 5px;
+}
+
+.fishing-card h3 {
+  color: #58a6ff;
+  margin: 15px 0 10px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+.fishing-card ul {
+  list-style-type: square;
+  padding-left: 20px;
+  margin: 0;
+}
+
+.fishing-card li {
+  color: #c9d1d9;
+  line-height: 1.6;
+}
+
+.fishing-card .raw-materials,
+.fishing-card .processes,
+.fishing-card .outcomes {
+  background: rgba(33, 38, 45, 0.9);
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.fishing-card .raw-materials:hover,
+.fishing-card .processes:hover,
+.fishing-card .outcomes:hover {
+  background: #1f6feb;
+  color: white;
+  transform: scale(1.02);
+  transition: 0.3s ease;
+}
+
+.fishing-card .image-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+  </style>
+  <body>
     <header>
-        <h1>Business News and Trends</h1>
+        <h1 id="head-title">BizForeSight - Business News and Trends</h1>
         <nav>
-            <ul></ul>
+          <ul></ul>
         </nav>
-    </header>
+      </header>
     <main>
-        <h1>Fishing</h1>
-        <section>
-            <h2>Latest Business News</h2>
-            <p>Stay updated with the latest trends and insights in business!</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Business News. All rights reserved.</p>
-    </footer>
+      <section>
+        <h2>Fishing Advancements Over Time</h2>
+        <div id="fishing-container"></div>
+        <div id="agri-container"></div>
+        <h1 style="display: flex;justify-content: space-evenly;border-bottom: 2px solid #1f6feb; padding-bottom: 20px;cursor:pointer;"> <span>o</span> FUTURE OF FISHING <span>o</span> </h1>
+        <div id="fishing-future"></div>
+      </section>
+      <footer class="footer">
+        <div class="container">
+          <!-- Footer Navigation -->
+          <div class="footer-nav">
+            <h3>Quick Links</h3>
+            <ul>
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="../dev-info.html">About Us</a></li>
+              <li><a href="../index.html">News</a></li>
+            </ul>
+          </div>
+  
+          <div class="footer-social">
+            <h3>Follow Us</h3>
+            <ul class="social-icons">
+              <li>
+                <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+              </li>
+            </ul>
+          </div>
+  
+          <div class="footer-contact">
+            <h3>Contact Us</h3>
+            <p><i class="fas fa-envelope"></i> info@example.com</p>
+            <p><i class="fas fa-phone"></i> +123 456 789</p>
+            <p>
+              <i class="fas fa-map-marker-alt"></i> 123 Main Street, City, Country
+            </p>
+          </div>
+        </div>
+  
+        <div class="footer-bottom">
+          <p>&copy;&nbsp;BizForeSight All Rights Reserved.</p>
+        </div>
+      </footer>
+    <script src="../sub-js/fishing.js"></script>
     <script src="../script.js"></script>
-</body>
+  </body>
 </html>
